# project-currency-ingestion

./: .env.example  .gitignore  Dockerfile  README.md  README.pt-BR.md  docker-compose.yml  pyproject.toml  script-01.py  script-02.py
.dlt/: example-secrets.toml
dags/: currency_ingestion_dag.py
ingestion/: pipeline.py  source.py
scripts/: script-01.py  script-02.py  script-03.py
